--- a/style.css
+++ b/style.css
@@ -25,14 +25,13 @@ body {
 .hero {
     display: flex;
     flex-direction: column;
-    /* height: 300px; */
     color: #f9faf8;
     background-color: #1f2937;
     align-items: center;
 }
 
 .hero > * {
-    width: 1000px;
+    width: 70%;
 }
 
 .hero .header {
@@ -50,8 +49,7 @@ body {
 
 .hero .content {
     display: flex;
-    margin: 50px;
-    /* padding: auto; */
+    margin: 100px;
     gap: 10px;
 }
 
@@ -83,10 +81,43 @@ body {
 }
 
 .hero .content .left button {
-    background-color: rgb(59, 158, 224);
+    background-color: #3882f6;
     color: #f9faf8;
     border: none;
     border-radius: 5px;
     padding: 6px 14px;
     font-weight: 900;
+}
+
+.random {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.random .header {
+    font-weight: 900;
+    font-size: 36px;
+    color: #1f2937;
+    padding: 30px;
+}
+
+.random .content {
+    display: flex;
+    gap: 30px;
+}
+
+.random .content .card {
+    width: 150px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.random .content .card .blank {
+    width: auto;
+    height: 100px;
+    border: 5px solid #3882f6;
+    border-radius: 16px;
+    margin-bottom: 10px;
 }
