--- a/style.css
+++ b/style.css
@@ -175,3 +175,12 @@ body {
     padding: 6px 14px;
     font-weight: 900;
 }
+
+.footer {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+}
