--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Roboto', serif;
 }
 
 a {
@@ -105,7 +106,7 @@ body {
 
 .random .content {
     display: flex;
-    gap: 30px;
+    gap: 50px;
 }
 
 .random .content .card {
@@ -116,8 +117,8 @@ body {
 }
 
 .random .content .card .blank {
-    width: auto;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     border: 5px solid #3882f6;
     border-radius: 16px;
     margin-bottom: 10px;
